src/tests/ci/assignment_5_functions/valid/22_include_in_include.c
#include "derived.h"
 
int main() {
    int x = quadruple(3);
    return x;
}
 