src/tests/ci/assignment_5_functions/invalid_semantic/09_function_undeclared_call.c
int add(int a, int b);  // Forward declaration only

int main() {
    int x = add(5, 3);  // Function not defined anywhere
    return x;
}